--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
 
     <script>
         // Base URL for API endpoints
-        const API_BASE_URL = 'http://localhost:3000/api';
+        const API_BASE_URL = 'http://melcom-retail-system.onrender.com/api';
 
         // Generic function to fetch entities
         async function fetchEntity(entityType) {
