--- a/index.html
+++ b/index.html
@@ -645,7 +645,8 @@
 
     <script>
         // Base URL for API endpoints
-        const API_BASE_URL = 'http://melcom-retail-system.onrender.com/api';
+        const API_BASE_URL = 'https://melcom-retail-system.onrender.com/api';
+        console.log("API_BASE_URL================", API_BASE_URL);
 
         // Generic function to fetch entities
         async function fetchEntity(entityType) {
@@ -655,6 +656,7 @@
                     throw new Error(`HTTP error! status: ${response.status}`);
                 }
                 return await response.json();
+                console.log("response================", response);
             } catch (error) {
                 console.error(`Error fetching ${entityType}:`, error);
                 showToast(`Error loading ${entityType}: ${error.message}`, 'error');
