employee branch options

--- a/index.html
+++ b/index.html
@@ -444,7 +444,9 @@
                         </div>
                         <div class="form-group">
                             <label for="Employee-branch">Branch</label>
-                            <select id="Employee-branch"></select>
+                            <select id="Employee-branch"><option value="">Select Branch</option></select>
+
+
                         </div>
                         <div class="form-actions">
                             <button type="button" class="btn btn-secondary" onclick="closeModal('Employee-modal')">Cancel</button>
