--- a/index.html
+++ b/index.html
@@ -444,7 +444,9 @@
                         </div>
                         <div class="form-group">
                             <label for="Employee-branch">Branch</label>
-                            <select id="Employee-branch"><option value="">Select Branch</option></select>
+                            <select id="Employee-branch">
+                                <option value="">Select Branch</option>
+                            </select>
 
 
                         </div>
@@ -1152,6 +1154,25 @@
             }
         }
 
+        async function loadBranchesForEmployeeDropdown() {
+    try {
+        const branches = await fetchEntity('branch');
+        const branchSelect = document.getElementById('Employee-branch');
+        branchSelect.innerHTML = '<option value="">Select Branch</option>';
+
+        branches.forEach(branch => {
+            const option = document.createElement('option');
+            option.value = branch.BranchID;
+            option.textContent = branch.Location;
+            branchSelect.appendChild(option);
+        });
+    } catch (error) {
+        console.error('Error loading branches for employee:', error);
+        showToast('Error loading branches for employee', 'error');
+    }
+}
+
+
         // Function to edit employee
         async function editEmployee(id) {
             try {
@@ -1165,7 +1186,7 @@
                     document.getElementById('Employee-phone').value = employee.PhoneNumber || '';
 
                     // Load branches before setting the selected branch
-                    await loadBranches();
+                    await loadBranchesForEmployeeDropdown();
                     document.getElementById('Employee-branch').value = employee.BranchID || '';
 
                     openModal('Employee-modal', 'Edit Employee');
