--- a/public/index.html
+++ b/public/index.html
@@ -654,7 +654,7 @@
 
     <script>
         // Authentication constants
-        const API_BASE_URL = 'http://localhost:3000/api';
+        const API_BASE_URL = 'https://melcom-retail-system.onrender.com/api';
         const AUTH_TOKEN_KEY = 'auth_token';
         const USER_EMAIL_KEY = 'user_email';
 
